// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provider initialize 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    this is foo
  </div>
</DocumentFragment>
`;

exports[`provider initialize 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    foo changed
  </div>
</DocumentFragment>
`;
